# odrive_hw_interface

./: CMakeLists.txt  README.md  docker-compose.yml  odrive_hw_interface.xml  odrive_test.py  package.xml
.devcontainer/: Dockerfile  devcontainer.json
config/: foward_publisher.yaml  odrive_controllers.yaml
hardware/: odrive-can.cpp  odrive_hw_interface.cpp
hardware/include/: odrive-can.hpp
hardware/include/odrive_hw_interface/: odrive_hw_interface.hpp  visibility_control.h
include/: odrive-can.hpp
include/odrive_hw_interface/: hardware_interface.hpp  odrive_hw_interface.hpp
install/: local_setup.sh  setup.sh
install/odrive_hw_interface/share/odrive_hw_interface/: package.bash  package.zsh
launch/: odrive.launch.py  test_foward_position_controller.launch.py
log/: latest_build
ros2_control/: odrive.ros2_control.xacro
src/: hardware_interface.cpp  odrive-can.cpp  odrive_hw_interface.cpp
temp/: Makefile
temp/src/: main.cpp  odrive-can.cpp  odrive-can.hpp
test/: test_odrive_hw_interface.cpp
urdf/: odrive.urdf.xacro  odrive_description.urdf.xacro
